gnovm/cmd/gno/testdata/gno_precompile/03_gno_files_parse_error.txtar
# Run gno precompile with gno files with parse errors

! gno precompile .

! stdout .+
stderr '^main.gno:3:1: expected declaration, found invalid$'
stderr '^sub/sub.gno:3:1: expected declaration, found invalid$'
stderr '^2 precompile error\(s\)$'

# TODO add more than a single error per file

# no *.gen.go files are created
! exec test -f main.gno.gen.go
! exec test -f sub/sub.gno.gen.go

-- main.gno --
package main

invalid

func main() {}

-- sub/sub.gno --
package sub

invalid
